--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,11 @@ node_modules/
 # Next.js build and cache files
 .next/
 out/
+.vercel/
+.cache/
 
 # Logs and temporary files
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -15,25 +18,27 @@ debug.log
 .DS_Store
 
 # Local environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Editor & System files
+# Ignore Editor & System files
 .vscode/
 .idea/
 *.swp
 Thumbs.db
 
-# Public uploaded assets (optional, if you want to ignore large files)
+# Ignore Next.js static export and cache
 public/uploads/
 public/static/
+public/cache/
 
-# Ignore package manager lock files (optional, but recommended for Next.js projects)
+# Ignore package manager lock files (optional, but recommended)
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
 
-# Large files
+# Ignore large files (your specific case)
 public/AI-Based Travel Plan Website.mov
