--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -9,22 +9,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      # 1️⃣ 检出代码
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Use Node
+      # 2️⃣ 安装 Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
 
-      - name: Install deps
+      # 3️⃣ 安装依赖
+      - name: Install dependencies
         run: npm ci
 
-      - name: Build & Export (Next -> static)
+      # 4️⃣ 构建并导出静态文件
+      - name: Build and Export Next.js
         run: |
           npm run build
           npx next export
 
+      # 5️⃣ 配置 AWS 凭证
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -32,7 +38,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Sync to S3
-        run: |
-          aws s3 sync ./out s3://${{ secrets.S3_BUCKET }} --delete \
-            --cache-control "public,max-age=31536000"
+      # 6️⃣ 同步文件到 S3
+      - name: Upload to S3
+        run: aws s3 sync ./out s3://${{ secrets.S3_BUCKET }} --delete
